--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_codigonline_round"
         android:supportsRtl="true"
-        android:theme="@style/Base.MyTheme">
+        android:theme="@style/Base.MyTheme"
+        >
         <activity android:name=".Activity2"/>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:theme="@style/Splash"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
