--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.codigonline.cursokotlin">
-    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
+
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_codigonline"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_codigonline_round"
         android:supportsRtl="true"
-        android:theme="@style/Base.MyTheme"
-        >
-        <activity android:name=".Activity2"/>
-        <activity android:name=".MainActivity"
-            android:theme="@style/Splash"
-            >
+        android:theme="@style/Base.MyTheme">
+        <activity
+            android:name=".NavigationActivity"
+            android:label="@string/title_activity_navigation"
+            android:theme="@style/Base.MyTheme.NoActionBar"></activity>
+        <activity android:name=".PlanetaActivity" />
+        <activity android:name=".PlanetasActivity" />
+        <activity android:name=".RegistroActivity" />
+        <activity android:name=".Activity2" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
