--- a/navigation_app/app/src/main/AndroidManifest.xml
+++ b/navigation_app/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Base.MyTheme">
+        android:theme="@style/Base.MyTheme"
+        android:name=".application.App"
+        >
         <activity android:name=".ui.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
