Clase #21 Firebase Authentication

--- a/firebase/app/build.gradle
+++ b/firebase/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -49,6 +50,11 @@ dependencies {
 
     //Circular Image View
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //FIREBASE
+    implementation platform('com.google.firebase:firebase-bom:26.8.0')
+    implementation 'com.google.firebase:firebase-auth-ktx'
+
 
 
 }
