--- a/firebase/app/src/main/AndroidManifest.xml
+++ b/firebase/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Base.MyTheme">
-        <activity android:name=".ui.RegistroActivity"></activity>
+        <activity android:name=".ui.RegistroActivity"/>
         <activity android:name=".ui.ProductoActivitiy" />
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".ui.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
