--- a/webservice/app/build.gradle
+++ b/webservice/app/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 
     //RETROFIT
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0' //RETROFIT
+    implementation 'com.google.code.gson:gson:2.8.6' //GSON
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0" //GSON PARA RETROFIT
 }
