--- a/webservice/app/src/main/AndroidManifest.xml
+++ b/webservice/app/src/main/AndroidManifest.xml
@@ -9,9 +9,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WebService">
+        android:theme="@style/Theme.WebService"
+        android:name=".application.App"
+        >
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
